finished gauss elimination exercises

--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -715,10 +715,6 @@
     "The left-to-right order in matrix products is critical because $AB$ and $BA$ are usually not the same.  In fact, unless $A$ and $B$ are both square matrices, only one of $AB$ or $BA$ will even be defined.  Given what we've seen so far, this shouldn't be surprising: the columns of $AB$ are linear combinations of the columns of $A$, whereas the columns of $BA$ are constructed from the columns of $B$.  We emphasize the position of the factors in the product $AB$ by saying $A$ is _right-multiplied_ by $B$ or that $B$ is _left-multiplied_ by $A$.  If $AB=BA$, we say that $A$ and $B$ _commute_ with each other.\n",
     "```\n",
     "\n",
-    "```{prf:example} TODO: mat-mul commute/don't commute\n",
-    "write me\n",
-    "```\n",
-    "\n",
     "```{warning} Cancellation Laws *DO NOT* hold\n",
     "If $AB = AC$, then it is _not_ true in genereal that $B=C$\n",
     "```\n",
@@ -726,6 +722,55 @@
     "If the product $AB$ is the zero matrix, you _cannot_ conclude in general that either $A=0$ or $B=0$.\n",
     "```\n",
     "We will get a better understanding for why these properties that hold for scalar multiplication breakdown for matrix multiplication later, but for now, it is still important that you are aware of these quirks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25b3f3a3",
+   "metadata": {},
+   "source": [
+    "```{prf:example} Matrix Multiplication Cautions\n",
+    "\n",
+    "1. Here, we'll give some examples of when matrices don't commute:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\bm 1 & 2 \\\\3 & 4 \\em \\bm 2 & 0 \\\\1 & 2 \\em \n",
+    "= \\bm  4 &4 \\\\10& 8\\em\n",
+    "\\neq \n",
+    "\\bm  2 &4 \\\\ 7&  10 \\em= \n",
+    "\\bm 2 & 0 \\\\ 1 & 2 \\em \\bm 1 & 2 \\\\ 3 & 4\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "It can also be the case that only one of the products exists. For example, the column vector $(0, 1, 2)$ and the row vector $\\bm 3 &4\\em$.\n",
+    "\n",
+    "As an additional exercise, can you think of some specific examples of when matrices *do* commute? For example, $AB = BA$ if $A = I$ or $B = I$.\n",
+    "\n",
+    "2. Here, we'll give an example of when the cancellation law doesn't hold (i.e., $AB = AC$ *does not* in general imply that $B = C$):\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 0 & 1 \\\\ 0 & 1 \\em \\bm 0 & 1 \\\\ 0 & 1 \\em = \\bm 0 & 1 \\\\ 0 & 1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "and \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 0 & 1 \\\\ 0 & 1 \\em\\bm 1 & 0 \\\\ 0 & 1 \\em  = \\bm 0 & 1 \\\\ 0 & 1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "but of course,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 1 & 0 \\\\ 0 & 1 \\em \\neq \\bm 0 & 1 \\\\ 0 & 1 \\em \n",
+    "\\end{align*}\n",
+    "\n",
+    "3. Here, we'll show that the product of 2 nonzero matrices can be zero:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\bm 0& 1 \\\\ 0 & 0\\em^2 = \\bm 0& 1 \\\\ 0 & 0\\em\\bm 0& 1 \\\\ 0 & 0\\em = \\bm 0& 0 \\\\ 0 & 0\\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "\n",
+    "```"
    ]
   },
   {
