--- a/Linear system of equations/023-linsys-gauss.ipynb
+++ b/Linear system of equations/023-linsys-gauss.ipynb
@@ -173,37 +173,112 @@
    "id": "6ceffd52-56eb-4625-8fbc-e4696a69e3f4",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
+    "````{exercise}  Regular Gaussian elimination and backsubstitution\n",
     ":label: row-reduce-ex1\n",
-    "Write me\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
     "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
+    "For the following system, write its augmented matrix. By hand, execute the regular Gaussian elimination algorithm; if the algorithm succeeds, then solve the system via backsubstitution on the upper triangular form augmented matrix.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    2x + y - z &= 8\\\\\n",
+    "    -3x - y + 2z &= -11\\\\\n",
+    "    -2x + y + 2z &= -3\n",
+    "\\end{align*}\n",
+    "\n",
+    "```{solution} row-reduce-ex1\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "The augmented matrix is:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        2 & 1 & -1 & 8 \\\\\n",
+    "        -3 & -1 & 2 & -11 \\\\\n",
+    "        -2 & 1 & 2 & -3\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Our first pivot is the element in position (1, 1), which is 2, which is nonzero. Let's use the first row to eliminate the first elements in rows 2 and 3, by doing $R_2 \\gets R_2 + (3/2)R_1$ and $R_3 \\gets R_3 + R_1$ (where $R_i$ denotes the ith row of the augmented matrix). Doing this gives us the equivalent augmented matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        2 & 1 & -1 & 8 \\\\\n",
+    "        0 & 1/2 & 1/2 & 1 \\\\\n",
+    "        0 & 2 & 1 & 5\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Our second pivot is the element in position (2, 2), which is $1/2$, which is nonzero. Using the second row to eliminate the second element in row 3, we get:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        2 & 1 & -1 & 8 \\\\\n",
+    "        0 & 1/2 & 1/2 & 1 \\\\\n",
+    "        0 & 0 & -1 & 1\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "The third and last pivot is $-1$, which is nonzezro, meaning the regular Gaussian elimination algorithm succeeded.\n",
+    "\n",
+    "Now, let's solve for $x$, $y$, and $z$ using backsubstitution. Starting from the last row:\n",
+    "\n",
+    "* The last row $\\left[ \\begin{array}{ccc|c}\n",
+    "        0 & 0 & -1 & 1\n",
+    "    \\end{array} \\right]$ tells us that $-z = 1$, in other words, $z = -1$.\n",
+    "\n",
+    "* The second to last row tells us $y/2 + z/2 = 1$. Since we know $z = -1$, we have $y/2 -1/2 = 1$, meaning $y = 3$.\n",
+    "\n",
+    "* The final row tells us that $2x + y - z = 8$. Since we know $z = -1$ and $y = 3$, we find that $x = 2$.\n",
+    "\n",
+    "So our final answer is $(x, y, z) = (2, 3, -1)$.\n",
+    "\n",
+    "\n",
     "```\n",
     "````"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c6493b5-6b12-415a-a159-646579661219",
+   "id": "65a31ff3",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
+    "````{exercise}  Regular Gaussian elimination and backsubstitution (cont.)\n",
+    ":label: row-reduce-ex2\n",
+    "For the following system, write its augmented matrix. By hand, execute the regular Gaussian elimination algorithm. Show how the algorithm fails for this system.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    x + 2y + 3z &= 6\\\\\n",
+    "    2x + 4y + 6z &= 12\\\\\n",
+    "    x + y + z &= 3\n",
+    "\\end{align*}\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "What's the value of the second pivot after we eliminate the first column?\n",
     "\n",
     ":::\n",
-    "```{solution} my-exercise\n",
+    "```{solution} row-reduce-ex2\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "The augmented matrix is:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        1 & 2 & 3 & 6 \\\\\n",
+    "        2 & 4 & 6 & 12 \\\\\n",
+    "        1 & 1 & 1 & 3\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Our first pivot is the element in position (1, 1), which is 1, which is nonzero. Let's use the first row to eliminate the first elements in rows 2 and 3, by doing $R_2 \\gets R_2 - 2R_1$ and $R_3 \\gets R_3 - R_1$ (where $R_i$ denotes the ith row of the augmented matrix). Doing this gives us the equivalent augmented matrix:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\left[ \\begin{array}{ccc|c}\n",
+    "        1 & 2 & 3 & 6 \\\\\n",
+    "        0 & 0 & 0 & 0 \\\\\n",
+    "        0 & -1 & -2 & -3\n",
+    "    \\end{array} \\right]\n",
+    "\\end{align*}\n",
+    "\n",
+    "Our second pivot is the element in position (2, 2), which is 0, which is zero. Therefore regular Gaussian elimination fails, meaning our coefficient matrix is irregular.\n",
+    "\n",
     "```\n",
     "````"
    ]
