modified:   Linear system of equations/023a-linsys-LU.ipynb 	modified:   Linear system of equations/024-linsys-perms.ipynb

--- a/Linear system of equations/023a-linsys-LU.ipynb
+++ b/Linear system of equations/023a-linsys-LU.ipynb
@@ -15,7 +15,7 @@
     "title: LU-Factorization\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: Peeling the Onion\n",
-    "short_title: Peeling the LU onion\n",
+    "short_title: LU-Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
