--- a/Linear system of equations/024-linsys-perms.ipynb
+++ b/Linear system of equations/024-linsys-perms.ipynb
@@ -15,7 +15,7 @@
     "title: The Permuted LU-Factorization\n",
     "subject:  Linear Algebraic Systems\n",
     "subtitle: Let's mix things up a little\n",
-    "short_title: Permutations and Permutation Matrices\n",
+    "short_title: Permuted LU-Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
