modified:   Linear system of equations/021-linsys-gauss.ipynb 	modified:   Linear system of equations/022-linsys-matvec.ipynb 	modified:   Linear system of equations/023-linsys-gauss.ipynb 	modified:   Linear system of equations/023a-linsys-LU.ipynb 	modified:   Linear system of equations/024-linsys-perms.ipynb 	new file:   Linear system of equations/025-linsys-inverses.ipynb

--- a/Linear system of equations/023-linsys-gauss.ipynb
+++ b/Linear system of equations/023-linsys-gauss.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: Gaussian Elimination Revisited\n",
-    "subject:  Linear Algebraic Systems\n",
+    "subject:  Linear System of Equations\n",
     "subtitle: Gaussian Elimination as Matrix Factorization\n",
     "short_title: Gaussian Elimination using Matrices\n",
     "authors:\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "dd1614ee-8355-4170-8d8e-02128fc97969",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "c193094b-cd70-4f6f-ace4-4ebf51a078d6",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "array([-3.,  2.,  1.])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "7a2401dc-1925-4c58-91cf-4c34cdc6def1",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "       [ 1.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
