--- a/Linear system of equations/023a-linsys-LU.ipynb
+++ b/Linear system of equations/023a-linsys-LU.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: LU-Factorization\n",
-    "subject:  Linear Algebraic Systems\n",
+    "subject:  Linear System of Equations\n",
     "subtitle: Peeling the Onion\n",
     "short_title: LU-Factorization\n",
     "authors:\n",
@@ -191,7 +191,16 @@
     "$$\n",
     "L_1L_2L_3U = L_1L_2L_3E_3E_2E_1A = L_1L_2E_2E_1A = A,\n",
     "$$\n",
-    "where we used the fact that $L_2E_2 = L_1E_1 = I$. Hence, calling $L = L_1L_2L_3$, we showed that $A = LU$. Since $L_1, L_2, L_3$ are all lower triangular, so is their product $L$. This is how we can obtain the LU facotrization of $A$ using elementary matrix operations. "
+    "where we used the fact that $L_2E_2 = L_1E_1 = I$. Hence, calling $L = L_1L_2L_3$, we showed that $A = LU$. Since $L_1, L_2, L_3$ are all lower triangular, so is their product $L$. This is how we can obtain the LU facotrization of $A$ using elementary matrix operations.\n",
+    "\n",
+    "Using the $LU$ factorization explained in this page, we give a formal definition for a _regular_ matrix. \n",
+    "\n",
+    "```{prf:definition} Regular matrix\n",
+    ":label: regular_matrix\n",
+    "A matrix $A$ is _regular_ if and only if it can be factored $A = L U$, where $L$ is a lower unitriangular matrix, having all 1’s on the diagonal, and $U$ is upper\n",
+    "triangular with nonzero diagonal entries, which are the pivots of $A$. The nonzero oﬀ-\n",
+    "diagonal entries $l_{ij}$ for $i > j$ appearing in $L$ prescribe the elementary row operations that bring $A$ into upper triangular form; namely, one subtracts $l_ij$ times row $j$ from row $i$ at the appropriate step of the Gaussian Elimination process.\n",
+    "```"
    ]
   },
   {
