--- a/Linear system of equations/024-linsys-perms.ipynb
+++ b/Linear system of equations/024-linsys-perms.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: The Permuted LU-Factorization\n",
-    "subject:  Linear Algebraic Systems\n",
+    "subject:  Linear System of Equations\n",
     "subtitle: Let's mix things up a little\n",
     "short_title: Permuted LU-Factorization\n",
     "authors:\n",
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: systems of linear equations, solution sets, forward elimination, back substitution\n",
+    "keywords: systems of linear equations, permutation matrices, interchanging rows\n",
     "---"
    ]
   },
@@ -62,7 +62,7 @@
     "tags": []
    },
    "source": [
-    "## Permutations\n",
+    "## Interchanging rows\n",
     "\n",
     "The method of Gaussian Elimination works only if the matrices are regular[^regular]. However, not every matrix is regular as given in the example below.\n",
     "\n",
@@ -93,7 +93,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\label{augm_swap}\n",
-    "\\left[ \\begin{array}{c|c}  U & c \\end{array}\\right] = \n",
+    "\\left[ \\begin{array}{c|c}  U &  \\textbf{c} \\end{array}\\right] = \n",
     "\\left[ \\begin{array}{ccc|c}  2& 6 & 1 & 7\\\\ 0 & 2 & 1 & 2\\\\ 0 & 0 & \\frac{9}{2} & \\frac{3}{2} \\end{array}\\right].\n",
     "\\end{equation}\n",
     "\n",
@@ -122,11 +122,151 @@
     "\n",
     "```{prf:theorem} Uniqueness of solution\n",
     ":label: uniqueness\n",
-    "A linear system $A x = b$ has a unique solution for every choice of right-hand side $b$ if and only if its coeﬃcient matrix $A$ is square and [nonsingular](#nonsingular).\n",
+    "A linear system $A \\textbf{x} = \\textbf{b}$ has a unique solution for every choice of right-hand side $b$ if and only if its coeﬃcient matrix $A$ is square and [nonsingular](#nonsingular).\n",
     "```\n",
     "We are able to prove the “if” part of this theorem, since nonsingularity implies reduction\n",
     "to an equivalent upper triangular form that has the same solutions as the original system.\n",
     "The unique solution to the system is then found by back substitution. The “only if” part will be proved later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfebd67e-0243-4689-b5a6-bc60b3414c21",
+   "metadata": {},
+   "source": [
+    "## Small Pivots cause numerical issues\n",
+    "\n",
+    "Consider the example\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "\\label{small_pivot}\n",
+    "0.01x +1.6y & = 32.1,\\\\\n",
+    "x+0.6y & = 22,\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "where, the exact solution is $x=10, y=20$ (verify for yourself). Let us assume we have a calculator that only retains three digits. The actual augmented matrix is given below after making it upper triangular.\n",
+    "\n",
+    "\\begin{equation} \n",
+    "\\left[ \\begin{array}{cc|c}  .01 & 1.6 & 32.1\\\\ 1 & .6 & 22 \\end{array}\\right] \\leftrightarrow \n",
+    "\\left[ \\begin{array}{cc|c}  .01 & 1.6 & 32.1\\\\ 0 & -159.4 & -3188 \\end{array}\\right].\n",
+    "\\end{equation}\n",
+    "\n",
+    "Since the calculator only retains three digits, the matrix computed by the calculator is\n",
+    "\\begin{equation} \n",
+    "\\label{small_pivot_augm} \n",
+    "\\left[ \\begin{array}{cc|c}  .01 & 1.6 & 32.1\\\\ 0 & -159 & -319 \\end{array}\\right].\n",
+    "\\end{equation}\n",
+    "\n",
+    "Solving by back substitution using [](#small_pivot_augm) is $y = \\frac{-3190}{159} \\approx 20.1 \\Rightarrow x \\approx -10$. Hence, a small error in $y$, i.e,  0.1, produces a large error in $x$! The problem is because of the small pivot $0.01$ at $(1,1)$. The small error in $y$ is scaled up when evaluating the first equation, where we have to divide the exression by the small pivot $0.01$. If we interchanged the rows so that the pivot is $1$ and proceed from there via Gauss Elimination, the approximate solution is ${y \\approx 20.1, x \\approx 9.9}$.\n",
+    "\n",
+    "```{tip}\n",
+    ":label: interchange_small_pivot\n",
+    "Small pivots cause issues in numerical computations. Use row interchanges to avoid small pivots.\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    ":label: finite_digits\n",
+    "Computers have much higher capacity to retain digits, but still finite. Similar numerical issues arise in computers as well. \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d47473f-4b98-412f-9fa8-8dfc38dc8296",
+   "metadata": {},
+   "source": [
+    "## Permutation matrices\n",
+    "\n",
+    "Similar to how [type 1 operations](./023-linsys-gauuss.ipynb#rowop1) are represented using [elementary matrices](./023a-linsys-LU.ipynb#elementary), we can represent [type 2 operations](rowop2) using _permutation matrices_. \n",
+    "\n",
+    "```{prf:definition} Permutation matrices\n",
+    ":label: perm_matrix\n",
+    "A permutation matrix is a matrix obtained from the identity matrix by _any_ combination of row interchanges.\n",
+    "```\n",
+    "\n",
+    "For example, to swap rows 1 and 2 of the matrix $A$, we left multiply $A$ by $P$ as follows.\n",
+    "\n",
+    "\\begin{equation} \n",
+    "\\label{perm_matrix} \n",
+    "A = \\begin{bmatrix}\n",
+    "1 & 2 & 3 \\\\\n",
+    "4 & 5 & 6 \\\\\n",
+    "7 & 8 & 9\n",
+    "\\end{bmatrix}, P = \\begin{bmatrix}\n",
+    "0 & 1 & 0 \\\\\n",
+    "1 & 0 & 0 \\\\\n",
+    "0 & 0 & 1\n",
+    "\\end{bmatrix} \\Rightarrow PA = \\begin{bmatrix}\n",
+    "4 & 5 & 6 \\\\\n",
+    "1 & 2 & 3 \\\\\n",
+    "7 & 8 & 9\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "\n",
+    "```{note} Also a Permutation matrix\n",
+    ":label: perm_matrix_alt\n",
+    "A matrix $P$ is a permutation matrix if and only if each row of $P$ contains all $0$ entries except for a single $1$, and, in addition, each column of $P$ also contains all $0$ entries except for a single $1$\n",
+    "```\n",
+    "\n",
+    ":::{important} Properties\n",
+    "1. If $P_1, P_2$ are permutation matrices, then their products $P_1P_2, P_2P_1$ are also permutation matrices.\n",
+    "2. In general, permutation matrices do not commute $P_1P_2 \\neq P_2P_1$, since the order of swapping matters.\n",
+    "3. If $P_1$ is a permutation matrix that swaps exactly one row with another, then $P_1P_1 = I$, because the inverse operation of interchanging two rows is the same original operation. This is **not true** for general permutation matrices that encode multiple swaps. \n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d75c14f8-45ce-4627-89a8-b27503907c78",
+   "metadata": {},
+   "source": [
+    "## Permuted LU-factorization\n",
+    "\n",
+    "From [](#nonsingular), every nonsingular matrix $A$ can be reduced to upper triangular form using [type 1 operations](./023-linsys-gauuss.ipynb#rowop1) and [type 2 operations](rowop2). If we perform all the permutations first using a permutation matrix $P$, then we obtain a [regular matrix](./023a-linsys-LU.ipynb#regular_matrix) $PA$ that admits an $LU$ factorization. Hence we can define the _permuted LU factorization_ of a nonsingular matrix $A$ as\n",
+    "\\begin{equation} \n",
+    "\\label{perm_LU} \n",
+    "PA = LU\n",
+    "\\end{equation}\n",
+    "\n",
+    "Given a permuted LU factorization of the matrix $A$, we can solve the system of equations by first doing forward substitution with $L\\textbf{z}= P\\textbf{b}$ and back substitution with $U\\textbf{x} = \\textbf{z}$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "567468ed-5e61-4134-8e8d-33617206a7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P: \n",
+      " [[0. 1. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [0. 0. 1.]] \n",
+      "L: \n",
+      " [[ 1.   0.   0. ]\n",
+      " [ 0.   1.   0. ]\n",
+      " [ 0.5 -1.   1. ]] \n",
+      "U: \n",
+      " [[2.  6.  1. ]\n",
+      " [0.  2.  1. ]\n",
+      " [0.  0.  4.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Permuted LU factorization\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.linalg import lu\n",
+    "\n",
+    "A = np.array([[0, 2, 1],\n",
+    "              [2, 6, 1],\n",
+    "              [1, 1, 4]])\n",
+    "P, L, U = lu(A)\n",
+    "print(\"P: \\n\", P, \"\\nL: \\n\", L, \"\\nU: \\n\", U)"
    ]
   },
   {
