--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "---\n",
     "title: Matrices and Vectors\n",
-    "subject:  Linear Algebraic Systems\n",
+    "subject:  Linear System of Equations\n",
     "subtitle: The building blocks of linear algebra\n",
     "short_title: Matrices and Vectors\n",
     "authors:\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d860eeea-d52d-4322-b5f1-64bdc7fbed63",
    "metadata": {},
    "outputs": [],
@@ -170,10 +170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96992cbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 6],\n",
+       "       [3, 3, 9]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Matrix addition\n",
     "\n",
@@ -235,10 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f99a5225",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  6,  9],\n",
+       "       [12, 15, 18]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# scalar multiplication\n",
     "scalar = 3\n",
@@ -359,10 +383,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8],\n",
+       "       [17]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# matrix vector multiplication\n",
     "product = A @ c # multipying matrix A with column-vector c\n",
@@ -576,10 +612,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5091e0ce-413c-40c1-87ce-ce07233b973f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A_C:  [[ 8 -1]\n",
+      " [17 -4]] \n",
+      "b_D:  [[-6 -1  4]]\n"
+     ]
+    }
+   ],
    "source": [
     "## Matrix Matrix multiplication\n",
     "C = np.array([[-1, -2],\n",
@@ -802,10 +848,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3cd633c2-ca7b-4d78-b580-16e5fc350adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A_block: \n",
+      " [[ 1.  2.  3. -1. -1.  0.]\n",
+      " [ 4.  5.  6. -3.  4.  2.]\n",
+      " [ 1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1.  0.  0.]] \n",
+      "A_block_1: \n",
+      " [[ 1.  2.  3. -1. -1.  0.]\n",
+      " [ 4.  5.  6. -3.  4.  2.]\n",
+      " [ 1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1. -3.  3.]]\n"
+     ]
+    }
+   ],
    "source": [
     "## Building block matrices.\n",
     "# Remember: A is of size 2x3\n",
@@ -824,10 +891,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c8c660f5-f489-4508-91c2-9cd5a052d520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  2.,  3., -1., -1.,  0.],\n",
+       "       [ 4.,  5.,  6., -3.,  4.,  2.],\n",
+       "       [ 1.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  1.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Another method of building block matrices\n",
     "# hstack: horizontal stack, vstack: vertical stack\n",
