--- a/Linear system of equations/025-linsys-inverses.ipynb
+++ b/Linear system of equations/025-linsys-inverses.ipynb
@@ -23,7 +23,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: systems of linear equations, solution sets, forward elimination, back substitution\n",
+    "keywords: inverse, Gauss Jordan elimination, identity matrix\n",
     "---"
    ]
   },
@@ -48,7 +48,8 @@
     "By the end of this page, you should know:\n",
     "- what is the inverse of a matrix\n",
     "- computing inverse for 2x2 matrices\n",
-    "- "
+    "- important properties of matrix inverse: existence, product\n",
+    "- Gauss Jordan elimination to compute inverses"
    ]
   },
   {
@@ -155,6 +156,10 @@
     "$$\n",
     "(AB)^{-1} = B^{-1}A^{-1} \\\\ \\textbf{order is reversed!}\n",
     "$$\n",
+    "We have to undo transformations in the right order.\n",
+    "$$\n",
+    "\\textbf{x} \\xrightarrow{B} B \\textbf{x} \\xrightarrow{A} AB\\textbf{x} \\xrightarrow{A^{-1}} A^{-1}AB\\textbf{x} = B\\textbf{x} \\xrightarrow{B^{-1}} B^{-1}B\\textbf{x} = \\textbf{x}\n",
+    "$$\n",
     "```"
    ]
   },
@@ -213,10 +218,162 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "10d74d88-58e1-41a8-9d89-e2de2c9e6edd",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7c9e2d87-ca3c-4d8e-a3c4-4d0c16c47509",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A_2_inv: \n",
+      " [[ 1.  2.]\n",
+      " [-0. -1.]] \n",
+      "A_inv: \n",
+      " [[ 1. -2.  0.]\n",
+      " [-0.  1. -0.]\n",
+      " [ 0.  3.  1.]]\n",
+      "\n",
+      "Checking inverses: \n",
+      " [[1. 0.]\n",
+      " [0. 1.]] \n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matrix inverse\n",
+    "\n",
+    "import numpy as np\n",
+    "from scipy.linalg import lu\n",
+    "\n",
+    "A_2 = np.array([[1, 2],\n",
+    "              [0, -1]])\n",
+    "\n",
+    "A = np.array([[1, 2, 0],\n",
+    "              [0, 1, 0],\n",
+    "              [0, -3, 1]])\n",
+    "\n",
+    "A_2_inv = np.linalg.inv(A_2)\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "print(\"A_2_inv: \\n\", A_2_inv, \"\\nA_inv: \\n\", A_inv)\n",
+    "print(\"\\nChecking inverses: \\n\", A_2_inv @ A_2, \"\\n\", A @ A_inv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e987c5fb-0090-46fe-8347-f283fe46d853",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Inverse of product: \n",
+      " [[ 1.         -2.66666667  0.        ]\n",
+      " [-0.          0.33333333 -0.        ]\n",
+      " [-1.          6.66666667  1.        ]] \n",
+      "Product of inverses:\n",
+      " [[ 1.         -2.66666667  0.        ]\n",
+      " [ 0.          0.33333333  0.        ]\n",
+      " [-1.          6.66666667  1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inverse of the product\n",
+    "\n",
+    "B = np.array([[1, 2, 0],\n",
+    "              [0, 3, 0],\n",
+    "              [1, -3, 1]])\n",
+    "\n",
+    "B_inv = np.linalg.inv(B)\n",
+    "\n",
+    "AB_inv = np.linalg.inv(A@B)\n",
+    "print(\"\\nInverse of product: \\n\", AB_inv, \"\\nProduct of inverses:\\n\", B_inv @ A_inv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "486bd141-e390-44ec-ab7f-a40e1d4b9ff6",
+   "metadata": {},
+   "source": [
+    "## Gauss Jordan Elimination\n",
+    "\n",
+    "Gauss Jordan Elimination (GJE) is the principal algorithm for computing inverses of a nonsingular matrix. \n",
+    "\n",
+    "```{important}\n",
+    "For a square matrix $A$, we only need to solve the _right inverse_ $AX = I$, since the _left inverse_ $XA = I$ is an automatic consequence.\n",
+    "```\n",
+    "\n",
+    "```{note}\n",
+    "Some matrices may satsify only one of the two conditions: either a right inverse $AX = I$ or a left inverse $XA = I$. For a non-square matrix, the same $X$ cannot satisfy $AX = XA = I$ (check dimensions). Hence, we emphasize that for $X$ to be an inverse of $A$, both left and right inverse conditions should be satisfied. \n",
+    "```\n",
+    "\n",
+    "We focus on the identity matrix which is the result after multiplying a matrix with its inverse. We define the $n \\times 1$ _unit vectors_ $\\textbf{e}_i$:\n",
+    "$$\n",
+    "\\textbf{e}_1 = \\begin{bmatrix} 1 \\\\ 0 \\\\ 0 \\\\ \\vdots \\\\ 0 \\end{bmatrix}, \\ \\textbf{e}_2 = \\begin{bmatrix} 0 \\\\ 1 \\\\ 0 \\\\ \\vdots \\\\ 0 \\end{bmatrix}, \\cdots, \\ \\textbf{e}_n = \\begin{bmatrix} 0 \\\\ 0 \\\\ \\vdots \\\\ 1 \\end{bmatrix}\n",
+    "$$\n",
+    "as the vectors with exactly one entry of $1$ in the $i^{th}$ position and zeros elsewhere. The vectors $\\textbf{e}_i$ are the columns of the identity matrix $I_n$:\n",
+    "$$\n",
+    "I_n = \\begin{bmatrix} \\textbf{e}_1 & \\textbf{e}_2 & \\cdots & \\textbf{e}_n \\end{bmatrix}\n",
+    "$$\n",
+    "Hence, the right inverse equation can be written as\n",
+    "$$\n",
+    "AX = I \\Leftrightarrow A \\begin{bmatrix} \\textbf{x}_1 & \\textbf{x}_2 & \\cdots & \\textbf{x}_n \\end{bmatrix} = \\begin{bmatrix} \\textbf{e}_1 & \\textbf{e}_2 & \\cdots & \\textbf{e}_n \\end{bmatrix} \\Leftrightarrow A\\textbf{x}_1 = \\textbf{e}_1, A\\textbf{x}_2 = \\textbf{e}_2, \\cdots, A\\textbf{x}_n = \\textbf{e}_n\n",
+    "$$\n",
+    "\n",
+    "The above set of $n$ linear system of equations have the same coefficient matrix $A$ and hence we can construct the following large augmented matrix $M$.\n",
+    "\\begin{equation}\n",
+    "\\label{big_augm}\n",
+    "M = \\left[ \\begin{array}{c|ccc} A & \\textbf{e}_1 & \\textbf{e}_2 & \\cdots & \\textbf{e}_n  \\end{array}\\right] = \\left[ \\begin{array}{c|c} A & I  \\end{array}\\right].\n",
+    "\\end{equation}\n",
+    "\n",
+    "Applying row operations ([scaling and adding](./023-linsys-gauuss.ipynb#rowop1), [swapping](./024-linsys-perms.ipynb#rowop2)) to [](#big_augm), we can reduce to upper triangular form\n",
+    "$$\n",
+    "M = \\left[ \\begin{array}{c|c} A & I  \\end{array}\\right] \\leftrightarrow N = \\left[ \\begin{array}{c|c} U & C  \\end{array}\\right].\n",
+    "$$\n",
+    "Then, we can solve the below set of $n$ linear systems via back substitution.\n",
+    "$$\n",
+    "U\\textbf{x}_1 = \\textbf{c}_1, U\\textbf{x}_2 = \\textbf{c}_2, \\cdots, U\\textbf{x}_n = \\textbf{c}_n\n",
+    "$$\n",
+    "\n",
+    "For example, consider the following $A$ matrix and the corresponding upper triangular form\n",
+    "\\begin{equation}\n",
+    "\\label{U_I}\n",
+    "A = \\begin{bmatrix}0 & 2 & 1 \\\\ 2 & 6 & 1 \\\\ 1 & 1 & 4 \\end{bmatrix} \\Rightarrow M =  \n",
+    "\\left[ \\begin{array}{ccc|ccc} 0 & 2 & 1 & 1 & 0 & 0 \\\\ 2 & 6 & 1 & 0 & 1 & 0 \\\\ 1 & 1 & 4 & 0 & 0 & 1 \\end{array}\\right] \\leftrightarrow N = \\left[ \\begin{array}{ccc|ccc} 2 & 6 & 1 & 0 & 1 & 0 \\\\ 0 & 2 & 1 & 1 & 0 & 0 \\\\ 0 & 0 & \\frac{9}{2} & 1 & -\\frac{1}{2} & 1 \\end{array}\\right].\n",
+    "\\end{equation}\n",
+    "A mot common version of GJE continues to apply row operations and fully reduce the augmented matrix to the form $\\left[ \\begin{array}{c|c} I & X  \\end{array}\\right]$ so that $X$ is the inverse of $A$. However, in our current form $\\left[ \\begin{array}{c|c} U & C  \\end{array}\\right] $, the diagonal pivots of $U$ are not $1$. \n",
+    "```{prf:observation} Elementary Row Operation \\#3\n",
+    ":label: rowop3\n",
+    "Multiplying a row of the augmented matrix by a nonzero scalar yields an equivalent linear system.\n",
+    "```\n",
+    "The [scaling operation](#rowop3) on $N$ in [](#U_I) reduces the augmented matrix to\n",
+    "\\begin{equation}\n",
+    "\\label{V}\n",
+    "N = \\left[ \\begin{array}{ccc|ccc} 2 & 6 & 1 & 0 & 1 & 0 \\\\ 0 & 2 & 1 & 1 & 0 & 0 \\\\ 0 & 0 & \\frac{9}{2} & 1 & -\\frac{1}{2} & 1 \\end{array}\\right] \\leftrightarrow \\left[ \\begin{array}{c|c} V & B \\end{array}\\right] = \\left[ \\begin{array}{ccc|ccc} 1 & 3 & \\frac{1}{2} & 0 & \\frac{1}{2} & 0 \\\\ 0 & 1 & \\frac{1}{2} & \\frac{1}{2} & 0 & 0 \\\\ 0 & 0 & 1 & \\frac{2}{9} & -\\frac{1}{9} & \\frac{2}{9} \\end{array}\\right],\n",
+    "\\end{equation}\n",
+    "\n",
+    "where we divide each row by its corresponding pivot. Now, to make $V$ identity, we perform row operations starting from $(2, 3)$ since we need to make the upper triangular entries $0$.\n",
+    "\\begin{equation}\n",
+    "\\label{I_X}\n",
+    "\\left[ \\begin{array}{c|c} V & B \\end{array}\\right] = \\left[ \\begin{array}{ccc|ccc} 1 & 3 & \\frac{1}{2} & 0 & \\frac{1}{2} & 0 \\\\ 0 & 1 & \\frac{1}{2} & \\frac{1}{2} & 0 & 0 \\\\ 0 & 0 & 1 & \\frac{2}{9} & -\\frac{1}{9} & \\frac{2}{9} \\end{array}\\right] \\leftrightarrow \\left[ \\begin{array}{ccc|ccc} 1 & 0 & 0 & -\\frac{23}{18} & \\frac{7}{18} & \\frac{2}{9} \\\\ 0 & 1 & 0 & \\frac{7}{18} & \\frac{1}{18} & -\\frac{1}{9} \\\\ 0 & 0 & 1 & \\frac{2}{9} & -\\frac{1}{9} & \\frac{2}{9} \\end{array}\\right]\n",
+    "\\end{equation}\n",
+    "Finally, the right-hand matrix in [](#I_X) is the inverse of $A$:\n",
+    "$$\n",
+    "A^{-1} = \\left[ \\begin{array}{ccc}  -\\frac{23}{18} & \\frac{7}{18} & \\frac{2}{9} \\\\  \\frac{7}{18} & \\frac{1}{18} & -\\frac{1}{9} \\\\  \\frac{2}{9} & -\\frac{1}{9} & \\frac{2}{9} \\end{array}\\right]\n",
+    "$$\n",
+    "\n",
+    ":::{hint} Think!\n",
+    ":class: dropdown\n",
+    "What is the [elementary matrix](./023a-linsys-LU.ipynb#elementary) corresponding to the [scaling operation](#row-op3)? Start from the identity matrix as before."
+   ]
   }
  ],
  "metadata": {
