--- a/Linear system of equations/023a-linsys-LU.ipynb
+++ b/Linear system of equations/023a-linsys-LU.ipynb
@@ -206,10 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "88791b79-a3a6-4576-993c-1313c249c6f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "L: \n",
+      " [[1.  0.  0. ]\n",
+      " [0.5 1.  0. ]\n",
+      " [0.5 0.5 1. ]] \n",
+      "U: \n",
+      " [[ 2.    6.    1.  ]\n",
+      " [ 0.   -2.    3.5 ]\n",
+      " [ 0.    0.   -1.25]]\n",
+      "\n",
+      "Solution x: \n",
+      " [-3.  2.  1.]\n"
+     ]
+    }
+   ],
    "source": [
     "## applying LU factoriation to solve linear equations\n",
     "\n",
